Citation UX Part

--- a/Documentation/Report/Literature.bib
+++ b/Documentation/Report/Literature.bib
@@ -1,208 +1,270 @@
-% This file was created with JabRef 2.9.2.
-% Encoding: UTF8
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
 
-@MISC{Apple14,
-  author = {Apple},
-  title = {iOS 7 Style Guide},
-  howpublished = {Website},
-  year = {2014},
-  owner = {moellers},
-  timestamp = {2014.03.16},
-  url = {https://developer.apple.com/library/ios/documentation/userexperience/conceptual/mobilehig/},
-  urldate = {16.03.2014 um 14:35 Uhr}
-}
 
-@MISC{Bain12,
-  author = {Bain},
-  title = {Retail Banking: Die digitale Herausforderung},
-  month = aug,
-  year = {2012},
-  owner = {Michael},
-  timestamp = {2014.03.16},
-  url = {http://www.bain.de/Images/Retail_Banking_II_Digitalisierung_ES.pdf},
-  urldate = {18.03.2014 um 01:00 Uhr}
-}
+%% Saved with string encoding Unicode (UTF-8) 
 
-@MISC{Balsamiq14,
-  author = {Balsamiq},
-  title = {Why Balsamiq Mockups for wireframing?},
-  howpublished = {Website},
-  year = {2014},
-  owner = {moellers},
-  timestamp = {2014.03.18},
-  url = {http://balsamiq.com/products/mockups/},
-  urldate = {23.02.2014 um 18:50 Uhr}
-}
 
-@MISC{TimeDoctor11,
-  author = {{Biz 3.0}},
-  title = {SVN, Git, Mercurial, and CVS – Comparison of Version Control Software},
-  year = {2011},
-  owner = {moellers},
-  timestamp = {2014.03.16},
-  url = {http://biz30.timedoctor.com/git-mecurial-and-cvs-comparison-of-svn-software/},
-  urldate = {23.02.2014 um 18:05 Uhr}
-}
 
-@MISC{Git14,
-  author = {Git},
-  title = {About},
-  howpublished = {Website},
-  year = {2014},
-  owner = {moellers},
-  timestamp = {2014.03.16},
-  url = {http://git-scm.com/about},
-  urldate = {23.02.2014 um 17:55 Uhr}
-}
+@misc{FlatDate13,
+	Author = {Shen, Steven},
+	Date-Added = {2014-03-18 13:17:51 +0000},
+	Date-Modified = {2014-03-18 13:20:08 +0000},
+	Howpublished = {GitHub-Projekt},
+	Title = {FlatDatePicker},
+	Url = {https://github.com/syshen/FlatDatePicker},
+	Urldate = {18.03.2014 um 14:09 Uhr},
+	Year = {2013}}
 
-@MISC{GitHub14,
-  author = {GitHub},
-  title = {GitHub Web Presence},
-  howpublished = {Website},
-  year = {2014},
-  owner = {moellers},
-  timestamp = {2014.03.16},
-  url = {https://github.com/},
-  urldate = {23.02.2014 um 17:55 Uhr}
-}
+@misc{CustomAlertView13,
+	Author = {Dansci, Richard },
+	Date-Added = {2014-03-18 13:05:04 +0000},
+	Date-Modified = {2014-03-18 13:10:05 +0000},
+	Howpublished = {GitHub-Projekt},
+	Title = {Custom iOS7 AlertView},
+	Url = {https://github.com/wimagguc/ios-custom-alertview},
+	Urldate = {18.03.2014 um 14:07 Uhr},
+	Year = {2013}}
 
-@ARTICLE{Jenkov14,
-  author = {Jenkov, Jakob},
-  title = {What is Dependency Injection?},
-  year = {2014},
-  owner = {moellers},
-  timestamp = {2014.03.18},
-  url = {http://tutorials.jenkov.com/dependency-injection/index.html},
-  urldate = {18.03.2014 um 01:15 Uhr}
-}
+@misc{SVHUD11,
+	Author = {Vermette, Sam},
+	Date-Added = {2014-03-18 12:57:59 +0000},
+	Date-Modified = {2014-03-18 13:14:54 +0000},
+	Howpublished = {GitHub-Projekt},
+	Title = {SVProgressHUD},
+	Url = {https://github.com/samvermette/SVProgressHUD},
+	Urldate = {18.03.2014 um 14:03 Uhr},
+	Year = {2011}}
 
-@MISC{Podsedly12,
-  author = {Podsedly, Dan},
-  title = {Velocity Matters},
-  month = aug,
-  year = {2012},
-  owner = {moellers},
-  timestamp = {2014.03.18},
-  url = {http://www.pivotaltracker.com/community/tracker-blog/velocity-matters},
-  urldate = {23.02.2014 um 18:00 Uhr}
-}
+@misc{JV13,
+	Author = {Verdi, Jared},
+	Date-Added = {2014-03-18 12:45:11 +0000},
+	Date-Modified = {2014-03-18 13:15:46 +0000},
+	Howpublished = {GitHub-Projekt},
+	Title = {JVFloatLabeledTextField },
+	Url = {https://github.com/jverdi/JVFloatLabeledTextField},
+	Urldate = {18.03.2014 um 13:54 Uhr},
+	Year = {2013}}
 
-@MISC{NYStyleGuide14,
-  author = {The New York Times},
-  title = {NYTimes Objective-C Style Guide},
-  year = {2014},
-  howpublished = {Website},
-  owner = {moellers},
-  timestamp = {2014.03.18},
-  url = {https://github.com/NYTimes/objective-c-style-guide},
-  urldate = {18.03.2014 um 11:27 Uhr}
-}
+@inbook{Walker02,
+	Author = {Walker, Miriam and Takayama, Leila and Landay, James A.},
+	Booktitle = {Proceedings of the Human Factors and Ergonomics Society Annual Meeting},
+	Date-Added = {2014-03-18 12:19:29 +0000},
+	Date-Modified = {2014-03-18 12:40:55 +0000},
+	Pages = {661--665},
+	Publisher = {SAGE Publications},
+	Title = {High-fidelity or low-fidelity, paper or computer? Choosing attributes when testing web prototypes},
+	Url = {http://pro.sagepub.com/content/46/5/661.short},
+	Volume = {46},
+	Year = {2002}}
 
-@MISC{GitHubIssues11,
-  author = {Kyle Neath},
-  title = {Issues 2.0: The Next Generation},
-  year = {2011},
-  howpublished = {Website},
-  owner = {alex},
-  timestamp = {2014.03.18},
-  url = {https://github.com/blog/831-issues-2-0-the-next-generation},
-  urldate = {18.03.2014 um 11:27 Uhr}
-}
+@article{DIN9241,
+	Author = {DIN, ENISO},
+	Date-Added = {2014-03-18 12:12:57 +0000},
+	Date-Modified = {2014-03-18 12:18:01 +0000},
+	Journal = {Ergonomie der Mensch-System-Interaktion--Teil 110: Grunds{\"a}tze der Dialoggestaltung (ISO 9241-110); Deutsche Fassung EN ISO 9241-110},
+	Title = {9241-110. },
+	Year = {2006}}
 
-@MISC{GitHubFeatures14,
-  author = {GitHub},
-  title = {GitHub - Features},
-  year = {2014},
-  howpublished = {Website},
-  owner = {alex},
-  timestamp = {2014.03.18},
-  url = {https://github.com/features},
-  urldate = {18.03.2014 um 11:27 Uhr}
-}
+@misc{Apple14,
+	Author = {Apple},
+	Howpublished = {Website},
+	Owner = {moellers},
+	Timestamp = {2014.03.16},
+	Title = {iOS 7 Style Guide},
+	Url = {https://developer.apple.com/library/ios/documentation/userexperience/conceptual/mobilehig/},
+	Urldate = {16.03.2014 um 14:35 Uhr},
+	Year = {2014},
+	Bdsk-Url-1 = {https://developer.apple.com/library/ios/documentation/userexperience/conceptual/mobilehig/}}
 
-@MISC{ScrumGuideIntro13,
-  author = {Ken Schwaber, Jeff Sutherland},
-  title = {The Scrum Guide},
-  year = {2013},
-  howpublished = {Website},
-  owner = {alex},
-  timestamp = {2014.03.18},
-  url = {https://www.scrum.org/Portals/0/Documents/Scrum%20Guides/Scrum_Guide.pdf},
-  urldate = {18.03.2014 um 11:27 Uhr}
-}
+@misc{Bain12,
+	Author = {Bain},
+	Month = aug,
+	Owner = {Michael},
+	Timestamp = {2014.03.16},
+	Title = {Retail Banking: Die digitale Herausforderung},
+	Url = {http://www.bain.de/Images/Retail_Banking_II_Digitalisierung_ES.pdf},
+	Urldate = {18.03.2014 um 01:00 Uhr},
+	Year = {2012},
+	Bdsk-Url-1 = {http://www.bain.de/Images/Retail_Banking_II_Digitalisierung_ES.pdf}}
 
-@MISC{ScrumGuideFull12,
-  author = {Kenneth S. Rubin},
-  title = {Essential Scrum},
-  pages = {195},
-  year = {2012},
-  howpublished = {Buch},
-  owner = {alex},
-}
+@misc{Balsamiq14,
+	Author = {Balsamiq},
+	Howpublished = {Website},
+	Owner = {moellers},
+	Timestamp = {2014.03.18},
+	Title = {Why Balsamiq Mockups for wireframing?},
+	Url = {http://balsamiq.com/products/mockups/},
+	Urldate = {23.02.2014 um 18:50 Uhr},
+	Year = {2014},
+	Bdsk-Url-1 = {http://balsamiq.com/products/mockups/}}
 
-@MISC{PivotalTracker14,
-  author = {PivotalTracker},
-  title = {PivotalTracker - How it works},
-  year = {2014},
-  owner = {moellers},
-  timestamp = {2014.03.18},
-  url = {https://www.pivotaltracker.com/why-tracker/how-it-works},
-  urldate = {18.03.2014 um 11:27 Uhr}
-}
+@misc{TimeDoctor11,
+	Author = {{Biz 3.0}},
+	Owner = {moellers},
+	Timestamp = {2014.03.16},
+	Title = {SVN, Git, Mercurial, and CVS -- Comparison of Version Control Software},
+	Url = {http://biz30.timedoctor.com/git-mecurial-and-cvs-comparison-of-svn-software/},
+	Urldate = {23.02.2014 um 18:05 Uhr},
+	Year = {2011},
+	Bdsk-Url-1 = {http://biz30.timedoctor.com/git-mecurial-and-cvs-comparison-of-svn-software/}}
 
-@BOOK{PMI08,
-  title = {A Guide to the Project Management Body of Knowledge},
-  year = {2008},
-  author = {{Projekt Management Institute}},
-  pages = {589},
-  address = {Newton Square},
-  edition = {Fifth Edition},
-  owner = {moellers},
-  timestamp = {2014.03.16}
-}
+@misc{Git14,
+	Author = {Git},
+	Howpublished = {Website},
+	Owner = {moellers},
+	Timestamp = {2014.03.16},
+	Title = {About},
+	Url = {http://git-scm.com/about},
+	Urldate = {23.02.2014 um 17:55 Uhr},
+	Year = {2014},
+	Bdsk-Url-1 = {http://git-scm.com/about}}
 
-@MISC{Tutorialspoint14,
-  author = {Tutorialspoint},
-  title = {Basic MVC Architecture},
-  year = {2014},
-  owner = {moellers},
-  timestamp = {2014.03.18},
-  url = {http://www.tutorialspoint.com/struts_2/basic_mvc_architecture.htm},
-  urldate = {18.03.2014 um 01:00 Uhr}
-}
+@misc{GitHub14,
+	Author = {GitHub},
+	Howpublished = {Website},
+	Owner = {moellers},
+	Timestamp = {2014.03.16},
+	Title = {GitHub Web Presence},
+	Url = {https://github.com/},
+	Urldate = {23.02.2014 um 17:55 Uhr},
+	Year = {2014},
+	Bdsk-Url-1 = {https://github.com/}}
 
-@MISC{Wang14,
-  author = {Wang, Wei},
-  title = {{VVDocumenter-Xcode}},
-  howpublished = {GitHub-Projekt},
-  month = feb,
-  year = {2014},
-  owner = {moellers},
-  timestamp = {2014.03.18},
-  url = {https://github.com/onevcat/VVDocumenter-Xcode},
-  urldate = {18.03.2014 um 01:30 Uhr}
-}
+@article{Jenkov14,
+	Author = {Jenkov, Jakob},
+	Owner = {moellers},
+	Timestamp = {2014.03.18},
+	Title = {What is Dependency Injection?},
+	Url = {http://tutorials.jenkov.com/dependency-injection/index.html},
+	Urldate = {18.03.2014 um 01:15 Uhr},
+	Year = {2014},
+	Bdsk-Url-1 = {http://tutorials.jenkov.com/dependency-injection/index.html}}
 
-@MISC{Welt14,
-  author = {Welt},
-  title = {Das ist ein Sterben auf Rate},
-  howpublished = {Website},
-  year = {2014},
-  owner = {Michael},
-  timestamp = {2014.03.16},
-  url = {http://www.welt.de/print/wams/wirtschaft/article124228415/Das-ist-ein-Sterben-auf-Raten.html},
-  urldate = {18.03.2014 um 01:00 Uhr}
-}
+@misc{Podsedly12,
+	Author = {Podsedly, Dan},
+	Month = aug,
+	Owner = {moellers},
+	Timestamp = {2014.03.18},
+	Title = {Velocity Matters},
+	Url = {http://www.pivotaltracker.com/community/tracker-blog/velocity-matters},
+	Urldate = {23.02.2014 um 18:00 Uhr},
+	Year = {2012},
+	Bdsk-Url-1 = {http://www.pivotaltracker.com/community/tracker-blog/velocity-matters}}
 
-@MISC{Yelp14,
-  author = {Yelp},
-  title = {Yelp Web Presence},
-  howpublished = {Website},
-  month = jan,
-  year = {2014},
-  owner = {Michael},
-  timestamp = {2014.03.16},
-  url = {http://www.yelp.de/},
-  urldate = {18.03.2014 um 01:00 Uhr}
-}
+@misc{NYStyleGuide14,
+	Author = {The New York Times},
+	Howpublished = {Website},
+	Owner = {moellers},
+	Timestamp = {2014.03.18},
+	Title = {NYTimes Objective-C Style Guide},
+	Url = {https://github.com/NYTimes/objective-c-style-guide},
+	Urldate = {18.03.2014 um 11:27 Uhr},
+	Year = {2014},
+	Bdsk-Url-1 = {https://github.com/NYTimes/objective-c-style-guide}}
 
+@misc{GitHubIssues11,
+	Author = {Kyle Neath},
+	Howpublished = {Website},
+	Owner = {alex},
+	Timestamp = {2014.03.18},
+	Title = {Issues 2.0: The Next Generation},
+	Url = {https://github.com/blog/831-issues-2-0-the-next-generation},
+	Urldate = {18.03.2014 um 11:27 Uhr},
+	Year = {2011},
+	Bdsk-Url-1 = {https://github.com/blog/831-issues-2-0-the-next-generation}}
+
+@misc{GitHubFeatures14,
+	Author = {GitHub},
+	Howpublished = {Website},
+	Owner = {alex},
+	Timestamp = {2014.03.18},
+	Title = {GitHub - Features},
+	Url = {https://github.com/features},
+	Urldate = {18.03.2014 um 11:27 Uhr},
+	Year = {2014},
+	Bdsk-Url-1 = {https://github.com/features}}
+
+@misc{ScrumGuideIntro13,
+	Author = {Ken Schwaber, Jeff Sutherland},
+	Howpublished = {Website},
+	Owner = {alex},
+	Timestamp = {2014.03.18},
+	Title = {The Scrum Guide},
+	Url = {https://www.scrum.org/Portals/0/Documents/Scrum%20Guides/Scrum_Guide.pdf},
+	Urldate = {18.03.2014 um 11:27 Uhr},
+	Year = {2013},
+	Bdsk-Url-1 = {https://www.scrum.org/Portals/0/Documents/Scrum%20Guides/Scrum_Guide.pdf}}
+
+@misc{ScrumGuideFull12,
+	Author = {Kenneth S. Rubin},
+	Howpublished = {Buch},
+	Owner = {alex},
+	Pages = {195},
+	Title = {Essential Scrum},
+	Year = {2012}}
+
+@misc{PivotalTracker14,
+	Author = {PivotalTracker},
+	Owner = {moellers},
+	Timestamp = {2014.03.18},
+	Title = {PivotalTracker - How it works},
+	Url = {https://www.pivotaltracker.com/why-tracker/how-it-works},
+	Urldate = {18.03.2014 um 11:27 Uhr},
+	Year = {2014},
+	Bdsk-Url-1 = {https://www.pivotaltracker.com/why-tracker/how-it-works}}
+
+@book{PMI08,
+	Address = {Newton Square},
+	Author = {{Projekt Management Institute}},
+	Edition = {Fifth Edition},
+	Owner = {moellers},
+	Pages = {589},
+	Timestamp = {2014.03.16},
+	Title = {A Guide to the Project Management Body of Knowledge},
+	Year = {2008}}
+
+@misc{Tutorialspoint14,
+	Author = {Tutorialspoint},
+	Owner = {moellers},
+	Timestamp = {2014.03.18},
+	Title = {Basic MVC Architecture},
+	Url = {http://www.tutorialspoint.com/struts_2/basic_mvc_architecture.htm},
+	Urldate = {18.03.2014 um 01:00 Uhr},
+	Year = {2014},
+	Bdsk-Url-1 = {http://www.tutorialspoint.com/struts_2/basic_mvc_architecture.htm}}
+
+@misc{Wang14,
+	Author = {Wang, Wei},
+	Howpublished = {GitHub-Projekt},
+	Month = feb,
+	Owner = {moellers},
+	Timestamp = {2014.03.18},
+	Title = {{VVDocumenter-Xcode}},
+	Url = {https://github.com/onevcat/VVDocumenter-Xcode},
+	Urldate = {18.03.2014 um 01:30 Uhr},
+	Year = {2014},
+	Bdsk-Url-1 = {https://github.com/onevcat/VVDocumenter-Xcode}}
+
+@misc{Welt14,
+	Author = {Welt},
+	Howpublished = {Website},
+	Owner = {Michael},
+	Timestamp = {2014.03.16},
+	Title = {Das ist ein Sterben auf Rate},
+	Url = {http://www.welt.de/print/wams/wirtschaft/article124228415/Das-ist-ein-Sterben-auf-Raten.html},
+	Urldate = {18.03.2014 um 01:00 Uhr},
+	Year = {2014},
+	Bdsk-Url-1 = {http://www.welt.de/print/wams/wirtschaft/article124228415/Das-ist-ein-Sterben-auf-Raten.html}}
+
+@misc{Yelp14,
+	Author = {Yelp},
+	Howpublished = {Website},
+	Month = jan,
+	Owner = {Michael},
+	Timestamp = {2014.03.16},
+	Title = {Yelp Web Presence},
+	Url = {http://www.yelp.de/},
+	Urldate = {18.03.2014 um 01:00 Uhr},
+	Year = {2014},
+	Bdsk-Url-1 = {http://www.yelp.de/}}
