UX Part - Fehlerkorrektur

--- a/Documentation/Report/Parts/UIUX.tex
+++ b/Documentation/Report/Parts/UIUX.tex
@@ -34,7 +34,7 @@
 \subsection{Logo \& Farbharmonie}
 	Unsere ausgewählte Farbharmonie spiegelt die Werte einer modernen Bank wider. Mit den Farben wollen wir Sicherheit, Nachhaltigkeit und Seriosität vermitteln. Allerdings waren wir bei der Logogestaltung in dieser Hinsicht nicht ganz konsequent. Wir hatten an dieser Stelle die Diskussion, ob wir uns nicht für ein anderes Logo entscheiden sollten. Mit dem KiBa-Glas im Logo haben wir uns dann darauf geeinigt, als Studenten ein wenig Humor zuzulassen. Im Zusammenspiel mit dem recht nüchternen Design wirkt das Logo auflockernd.
 
-\subsection{UI-Elemete}
+\subsection{UI-Elemente}
 	Grundsätzlich haben wir mit den Standard-View-Elementen von IOS7 gearbeitet. Allerdings haben wir in manchen Fällen auf Custom-Elemente zurückgegriffen und diese dann möglichst konsequent eingesetzt. Dabei haben wir darauf geachtet, dass die Eigenlösungen zu dem IOS7 Design passen. Bei dem Standard-Text-Field störte uns, dass der Placeholder-Text bei der Eingabe verschwand und so die Eingabe gelöscht werden musste, um diesen wieder zu sehen. Man stelle sich vor, man möchte ein Überweisungsformular ausfüllen und während der Eingabe eines Feldes ist man sich nicht mehr sicher, wofür dieses steht. Daher entschieden wir uns für eine Eigenlösung, die den Vorteil hat, dass der Placeholder-Text bei erfolgter Eingabe nach oben rückt und auf diese Weise sichtbar bleibt \citep{JV13}. 
 
  	Der Verbindungsaufbau mit der KiBa-Station und die Authentifikation sind wichtige Elemente in unserem Konzept. Besonders an dieser Stelle war es uns wichtig Sicherheit bei der Datenübertragung zu vermitteln. Mit dem flexiblen und individuell gestaltbaren SVProgressHUD \citep{SVHUD11} konnten wir nach unseren Vorstellungen diese Vorgänge abbilden.
