specified citation infos

--- a/Documentation/Report/Literature.bib
+++ b/Documentation/Report/Literature.bib
@@ -2,6 +2,9 @@
 %% http://bibdesk.sourceforge.net/
 
 
+%% Created for //// at 2014-03-21 21:51:02 +0100 
+
+
 %% Saved with string encoding Unicode (UTF-8) 
 
 
@@ -14,17 +17,19 @@
 	Title = {FlatDatePicker},
 	Url = {https://github.com/syshen/FlatDatePicker},
 	Urldate = {18.03.2014 um 14:09 Uhr},
-	Year = {2013}}
+	Year = {2013},
+	Bdsk-Url-1 = {https://github.com/syshen/FlatDatePicker}}
 
 @misc{CustomAlertView13,
-	Author = {Dansci, Richard },
+	Author = {Dansci, Richard},
 	Date-Added = {2014-03-18 13:05:04 +0000},
 	Date-Modified = {2014-03-18 13:10:05 +0000},
 	Howpublished = {GitHub-Projekt},
 	Title = {Custom iOS7 AlertView},
 	Url = {https://github.com/wimagguc/ios-custom-alertview},
 	Urldate = {18.03.2014 um 14:07 Uhr},
-	Year = {2013}}
+	Year = {2013},
+	Bdsk-Url-1 = {https://github.com/wimagguc/ios-custom-alertview}}
 
 @misc{SVHUD11,
 	Author = {Vermette, Sam},
@@ -34,17 +39,19 @@
 	Title = {SVProgressHUD},
 	Url = {https://github.com/samvermette/SVProgressHUD},
 	Urldate = {18.03.2014 um 14:03 Uhr},
-	Year = {2011}}
+	Year = {2011},
+	Bdsk-Url-1 = {https://github.com/samvermette/SVProgressHUD}}
 
 @misc{JV13,
 	Author = {Verdi, Jared},
 	Date-Added = {2014-03-18 12:45:11 +0000},
 	Date-Modified = {2014-03-18 13:15:46 +0000},
 	Howpublished = {GitHub-Projekt},
-	Title = {JVFloatLabeledTextField },
+	Title = {JVFloatLabeledTextField},
 	Url = {https://github.com/jverdi/JVFloatLabeledTextField},
 	Urldate = {18.03.2014 um 13:54 Uhr},
-	Year = {2013}}
+	Year = {2013},
+	Bdsk-Url-1 = {https://github.com/jverdi/JVFloatLabeledTextField}}
 
 @inbook{Walker02,
 	Author = {Walker, Miriam and Takayama, Leila and Landay, James A.},
@@ -56,14 +63,15 @@
 	Title = {High-fidelity or low-fidelity, paper or computer? Choosing attributes when testing web prototypes},
 	Url = {http://pro.sagepub.com/content/46/5/661.short},
 	Volume = {46},
-	Year = {2002}}
+	Year = {2002},
+	Bdsk-Url-1 = {http://pro.sagepub.com/content/46/5/661.short}}
 
 @article{DIN9241,
 	Author = {DIN, ENISO},
 	Date-Added = {2014-03-18 12:12:57 +0000},
 	Date-Modified = {2014-03-18 12:18:01 +0000},
 	Journal = {Ergonomie der Mensch-System-Interaktion--Teil 110: Grunds{\"a}tze der Dialoggestaltung (ISO 9241-110); Deutsche Fassung EN ISO 9241-110},
-	Title = {9241-110. },
+	Title = {9241-110.},
 	Year = {2006}}
 
 @misc{Apple14,
@@ -152,10 +160,11 @@
 	Year = {2012},
 	Bdsk-Url-1 = {http://www.pivotaltracker.com/community/tracker-blog/velocity-matters}}
 
-@misc{NYStyleGuide14,
+@webpage{NYStyleGuide14,
 	Author = {The New York Times},
+	Date-Modified = {2014-03-21 20:49:04 +0000},
 	Howpublished = {Website},
-	Owner = {moellers},
+	Owner = {alex},
 	Timestamp = {2014.03.18},
 	Title = {NYTimes Objective-C Style Guide},
 	Url = {https://github.com/NYTimes/objective-c-style-guide},
@@ -163,8 +172,9 @@
 	Year = {2014},
 	Bdsk-Url-1 = {https://github.com/NYTimes/objective-c-style-guide}}
 
-@misc{GitHubIssues11,
+@webpage{GitHubIssues11,
 	Author = {Kyle Neath},
+	Date-Modified = {2014-03-21 20:49:12 +0000},
 	Howpublished = {Website},
 	Owner = {alex},
 	Timestamp = {2014.03.18},
@@ -174,8 +184,9 @@
 	Year = {2011},
 	Bdsk-Url-1 = {https://github.com/blog/831-issues-2-0-the-next-generation}}
 
-@misc{GitHubFeatures14,
+@webpage{GitHubFeatures14,
 	Author = {GitHub},
+	Date-Modified = {2014-03-21 20:49:18 +0000},
 	Howpublished = {Website},
 	Owner = {alex},
 	Timestamp = {2014.03.18},
@@ -185,8 +196,9 @@
 	Year = {2014},
 	Bdsk-Url-1 = {https://github.com/features}}
 
-@misc{ScrumGuideIntro13,
+@webpage{ScrumGuideIntro13,
 	Author = {Ken Schwaber, Jeff Sutherland},
+	Date-Modified = {2014-03-21 20:47:56 +0000},
 	Howpublished = {Website},
 	Owner = {alex},
 	Timestamp = {2014.03.18},
@@ -196,16 +208,19 @@
 	Year = {2013},
 	Bdsk-Url-1 = {https://www.scrum.org/Portals/0/Documents/Scrum%20Guides/Scrum_Guide.pdf}}
 
-@misc{ScrumGuideFull12,
+@book{ScrumGuideFull12,
 	Author = {Kenneth S. Rubin},
+	Date-Modified = {2014-03-21 20:50:04 +0000},
 	Howpublished = {Buch},
 	Owner = {alex},
 	Pages = {195},
+	Publisher = {Addison-Wesley Professional},
 	Title = {Essential Scrum},
 	Year = {2012}}
 
-@misc{PivotalTracker14,
+@webpage{PivotalTracker14,
 	Author = {PivotalTracker},
+	Date-Modified = {2014-03-21 20:48:47 +0000},
 	Owner = {moellers},
 	Timestamp = {2014.03.18},
 	Title = {PivotalTracker - How it works},
@@ -234,8 +249,9 @@
 	Year = {2014},
 	Bdsk-Url-1 = {http://www.tutorialspoint.com/struts_2/basic_mvc_architecture.htm}}
 
-@misc{Wang14,
+@webpage{Wang14,
 	Author = {Wang, Wei},
+	Date-Modified = {2014-03-21 20:48:36 +0000},
 	Howpublished = {GitHub-Projekt},
 	Month = feb,
 	Owner = {moellers},
