--- a/Documentation/Report/Literature.bib
+++ b/Documentation/Report/Literature.bib
@@ -223,7 +223,7 @@
 	Timestamp = {2014.03.16},
 	Title = {A Guide to the Project Management Body of Knowledge},
 	Year = {2008}}
-
+\newpage
 @misc{Tutorialspoint14,
 	Author = {Tutorialspoint},
 	Owner = {moellers},
@@ -251,7 +251,7 @@
 	Howpublished = {Website},
 	Owner = {Michael},
 	Timestamp = {2014.03.16},
-	Title = {Das ist ein Sterben auf Rate},
+	Title = {Das ist ein Sterben auf Raten},
 	Url = {http://www.welt.de/print/wams/wirtschaft/article124228415/Das-ist-ein-Sterben-auf-Raten.html},
 	Urldate = {18.03.2014 um 01:00 Uhr},
 	Year = {2014},
